# anki-chinese

./: LICENSE  README.md  anki-vocab.py  pyproject.toml  requirements.txt
ankichinese/: __init__.py  cli.py  pinyin.py  tokenizer.py  translate.py
example/: README.md  harry_potter_wikipedia.txt  harry_potter_wikipedia_vocab.txt
